feat(ci): add schema validation in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@main
+        with:
+          submodules: true
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -139,30 +141,18 @@ jobs:
         run: docker compose run --rm serve ./manage.py test --keepdb -v 2 --pattern="test_fake.py"
 
       # NOTE: Schema generation requires a valid database. Therefore, this step must run after "Run Django migrations."
-      - name: 🕮 Generate latest openapi schema
+      - name: Validate latest OpenAPI schema.
         env:
           DOCKER_IMAGE: ${{ steps.prep.outputs.tagged_image }}
           DJANGO_DB_NAME: "test_test"
-        run: |
-          docker compose run --rm serve ./manage.py spectacular --file openapi-schema-latest.yaml
 
-      - name: 🕮 Upload latest openapi schema to IFRCGo/go-api-artifacts
-        env:
-          # Github
-          # NOTE: `GO_API_ARTIFACTS_TOKEN` has an expiry date. Please follow `docs/go-artifacts.md` for token rotation.
-          GITHUB_TOKEN: ${{ secrets.GO_API_ARTIFACTS_TOKEN }}
-          GITHUB_OWNER: IFRCGo
-          GITHUB_REPO: go-api-artifacts
-          GITHUB_BRANCH: main
-          # File
-          SOURCE_FILE_PATH: openapi-schema-latest.yaml
         run: |
-          COMMIT_SHA="${{ github.event.pull_request.head.sha || github.sha }}"
-          export DEST_FILE_PATH="generated/$COMMIT_SHA/openapi-schema.yaml"
-          export COMMIT_MESSAGE="Add openapi-schema of $GITHUB_REF_NAME@$COMMIT_SHA"
-          .github/go-api-artifacts-add-or-replace.sh
-          DEST_FILE_URL="https://github.com/$GITHUB_OWNER/$GITHUB_REPO/blob/$GITHUB_BRANCH/$DEST_FILE_PATH"
-          echo "::notice::Uploaded latest openapi-schema to: ${DEST_FILE_URL}"
+          docker compose run --rm serve ./manage.py spectacular --file openapi-schema-latest.yaml &&
+          cmp --silent ./assets/openapi-schema.yaml openapi-schema-latest.yaml || {
+            echo 'The openapi-schema is not up to date with the latest changes. Please update and push latest';
+            diff ./assets/openapi-schema.yaml openapi-schema-latest.yaml;
+            exit 1;
+          }
 
       - name: 🤞 Run Test 🧪
         env:
