--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "assets"]
 	path = assets
-	url = https://github.com/IFRCGo/go-api-artifacts
+	url = git@github.com:IFRCGo/go-api-artifacts.git
